Tests/ShouldFail/try6.adl
CONTEXT Test

PATTERN Test6
RELATION r[A*C]
RELATION s[A*B]
RELATION t[B*C]
RELATION t[Q*C]
SPEC Q ISA B
RULE r = s;t
ENDPATTERN

ENDCONTEXT

{-
   Purpose: Even though both relation declarations can be implemented by  one and the same table,
            the fact remains that two declaration match t on line 9:12.
   Result: FAIL
line 9:12, file "try6.adl":
    Relation  t  must be bound to one declaration only,
    but it can be matched to each of the following declarations:
     t[Q*C] on line 7:1, file "try7.adl"
     t[B*C] on line 6:1, file "try7.adl".
-}